[package]
name = "safe"
version = "0.1.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>", "Mazdak Farrokhzad <twingoow@gmail.com>"]
edition = "2018"
description = "A `#[safe]` attribute for explaining why `unsafe { ... }` is OK."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Centril/rust-safe"
keywords = ["safe", "unsafe", "soundness"]
categories = ["development-tools", "rust-patterns"] 
build = "build.rs"

[dependencies]
darling = "0.9.0"
syn = "0.15.34"
quote = "0.6.12"
proc-macro2 = "0.4.30"

[dev-dependencies]
libc = "0.2"
skeptic = "0.13.4"

[lib]
proc-macro = true

[build-dependencies]
skeptic = "0.13.4"
